--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 :root {
-  font-family: Courier , Avenir, Helvetica, Arial, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-
+  /* Verdana , Avenir, Helvetica, Arial, sans-serif */
   color: #0f0f0f;
   background-color: #f6f6f6;
 
@@ -22,9 +22,10 @@
   margin: 0;
   padding: 10vh;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
   text-align: center;
+  vertical-align: middle;
 }
 
 .logo {
@@ -66,16 +67,14 @@ button {
   text-align: center;
   border-radius: 8px;
   border: 1px solid transparent;
-  /* padding: 16px; */
-  /* font-size: 1em; */
   font-weight: 500;
-  font-family: inherit;
   color: #ffffff;
   background-color: #0f0f0f98;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   height: 50px;
   width: 50px;
   margin: 2px;
+  transition: background-color 0.5s;
   -webkit-transition: background-color 0.5s;
 
 }
@@ -85,39 +84,37 @@ button {
   text-align: center;
   border-radius: 8px;
   border: 1px solid transparent;
-  /* padding: 16px; */
   font-size: 20px;
   font-weight: 500;
-  font-family: inherit;
   color: #ffffff;
   background-color: #2f2f2f;
-  /* transition: border-color 0.25s; */
-  /* box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2); */
   height: 50px;
   width: 50px;
   margin: 2px;
 }
 
-
-
 .button-hidden:hover {
-  background-color: #333333;
+  background-color: #262626;
+  transition: background-color 0.5s;
   -webkit-transition: background-color 0.5s;
 }
 
 
-button:active {
-  border-color: #396cd8;
-  background-color: #e8e8e8;
+.button-hidden:active {
+  background-color: #2f2f2f;
+  transition: background-color 0.5s;
+  -webkit-transition: background-color 0.5s;
+}
+
+.button-shown:active {
+  background-color: #2f2f2f;
+  transition: background-color 0.5s;
+  -webkit-transition: background-color 0.5s;
 }
 
 input,
 button {
   outline: none;
-}
-
-#greet-input {
-  margin-right: 5px;
 }
 
 @media (prefers-color-scheme: dark) {
