--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
   line-height: 24px;
   font-weight: 400;
   /* Verdana , Avenir, Helvetica, Arial, sans-serif */
-  color: #0f0f0f;
+  color: #0f0f0f98;
   background-color: #f6f6f6;
 
   font-synthesis: none;
@@ -67,8 +67,9 @@ button {
   text-align: center;
   border-radius: 8px;
   border: 1px solid transparent;
-  font-weight: 500;
-  color: #0f0f0f98;
+  /* font-weight: 500; */
+  font-size: 25px;
+  color: rgba(15, 15, 15, 0.0);
   background-color: #0f0f0f98;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   height: 50px;
@@ -84,9 +85,9 @@ button {
   text-align: center;
   border-radius: 8px;
   border: 1px solid transparent;
-  font-size: 20px;
-  font-weight: 500;
-  /* color: #2f2f2f; */
+  font-size: 25px;
+  font-weight: 700;
+  color: #0f0f0f98;
   background-color: #2f2f2f;
   height: 50px;
   width: 50px;
